@@ -1,3 +1,9 @@
+24 May 2019 
+Renamed variable 'nice' to 'beNice', since 'nice' is a reserved word in some
+C-implementations. Also use printf format %lu instead of %zu if __VMS is
+defined. Many thanks to https://github.com/TheFausap for porting Bracmat to
+OpenVMS and for testing.
+
 23 May 2019
 Put #ifdef __VMS ... #endif around yesterday's change in wmv$ implementation.  
 
